add rxjs 자동 검색 기능 추가 했는데 컴포넌트에서 안보여짐

--- a/github-search/angular.json
+++ b/github-search/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "github-search"
+    }
+  },
+  "defaultProject": "github-search",
+  "cli": {
+    "analytics": false
+  }
 }
